--- a/2015/2015_01_14_15.md
+++ b/2015/2015_01_14_15.md
@@ -7,7 +7,7 @@
 	郊外耐了多白天的霾
 	
 	我蹬上一辆旧时的婚车
-	丢了钥匙，老妈就去买了把新锁
+	找不到车钥匙，老妈去买了把新锁
 	
 	我摇着生锈的铃铛
 	轻快地跑在年少上学的路上
@@ -31,18 +31,18 @@
 ## 出城
 
 	我蹬着旧时的婚车
-	穿得像一个乞丐
+	打扮得像一个乞丐
 	
 	街角冰冷的长凳
-	坐着无语的老头老太
+	坐着无语的老头和老太
 	
 	我闯了六个绿灯
 	车锁到银行的门外
 	
-	商场里暖和的空气
+	商场里暖暖的空气
 	烘烤着长凳上傻笑的情侣
 	
-	一对颤悠悠的七八十岁老头
+	一对颤悠悠的七、八十岁老头
 	讨论着冰冰扮演的妲己
 	
 	我骑在放学回家的路上
