--- a/2015/2015_01_14_15.md
+++ b/2015/2015_01_14_15.md
@@ -4,19 +4,19 @@
 ## 进城
 
 	市内下了三分钟的雪
-	郊外耐了多白天的霾
+	郊外耐了多半天的霾
 	
 	我蹬上一辆旧时的婚车
 	找不到车钥匙，老妈去买了把新锁
 	
 	我摇着生锈的铃铛
-	轻快地跑在年少上学的路上
+	轻快地跑在年少时上学的路上
 	
 	遇见那进站的火车，似条乌黑贪吃的铁蛇
 	消化着钢圈和铁砣
 	
 	远近那尿急的烟囱
-	憋不住而尿向了天空，尿湿了行人的眼睛
+	憋不住而尿向了天空，尿湿了行人们的眼睛
 	
 	遇见热情的妇人
 	搀扶着醉酒的孩童
