--- a/2015/2015_01_15_13.md
+++ b/2015/2015_01_15_13.md
@@ -1,12 +1,12 @@
 
-#15年1月15日，中午
+## 15年1月15日，中午12点
 
-#喝粥
+# 喝粥
 
 	免费粥桶旁边
 	一个务工老汉
 	     站立捧着大碗
-	          开心喝着稀饭
+	          呼呼喝着稀饭
 	
 	邻座一个女郎
 	     腰挂黄色短裙
@@ -25,3 +25,20 @@
 	
 	若先一碗盛满
 	     喝完还剩？干瞪眼！
+
+
+15年1月15日
+
+	下午三点
+	
+	窗外
+	     烟雾是凝不到一起的蛋清
+	     太阳是颗诱人的咸蛋黄
+	
+	戳在窗边，我是一粒灰溜溜的皮蛋
+	
+	明天的早餐，白鸡蛋要换咸鸭蛋。
+	
+	太阳是颗西瓜大的蛋黄么？
+	再看，太阳已经是大象屁股上的一张红唇印。
+
