--- a/2015/2015_01_15_13.md
+++ b/2015/2015_01_15_13.md
@@ -27,18 +27,23 @@
 	     喝完还剩？干瞪眼！
 
 
-15年1月15日
+2002年，大舅因胃癌去世。
+
+
+
+# 15年1月15日，下午
 
 	下午三点
 	
 	窗外
-	     烟雾是凝不到一起的蛋清
+	     烟雾是层湿滑的蛋清
 	     太阳是颗诱人的咸蛋黄
 	
-	戳在窗边，我是一粒灰溜溜的皮蛋
-	
-	明天的早餐，白鸡蛋要换咸鸭蛋。
-	
+	戳在窗边，我是粒灰溜溜的松花蛋
+		
 	太阳是颗西瓜大的蛋黄么？
 	再看，太阳已经是大象屁股上的一张红唇印。
 
+
+
+明天的早餐，白鸡蛋要换咸鸡蛋？
