--- a/2015/2015_01_15_13.md
+++ b/2015/2015_01_15_13.md
@@ -40,12 +40,13 @@
 	     太阳是颗诱人的咸蛋黄
 	
 	戳在窗边，我是粒灰溜溜的松花蛋
+
+	明天的早餐，白鸡蛋要换咸鸭蛋
 		
 	太阳是颗西瓜大的蛋黄么？
 	再看，太阳已经是大象屁股上的一张红唇印。
 
 
 
-今日是2015年的首个严重雾霾天。
+15日是2015年北京的首个严重雾霾天。
 
-明天的早餐，白鸡蛋要换咸鸡蛋。
