--- a/2015/2015_01_15_22.md
+++ b/2015/2015_01_15_22.md
@@ -1,5 +1,7 @@
 
-2015年1月15日晚，22点
+# 2015年1月15日晚，22点
+
+![Starry](vincent/starry_Rhone2.jpg)
 
 	星星是夜空中嫩黄色的雏菊
 	
@@ -9,17 +11,18 @@
 	
 	村庄若隐若现
 	
-	房间闪出灯火，
+	靠湖的房间闪出灯火
 	
-	那绕湖的灯火的光影
+	那灯火的光影
 	
 	投入湖中
 	
-	变成一根根书籍书籍堆的柱子
+	变成书籍歪斜叠起的柱子
 	
 	微微弯曲的地平线
 	
-	是柱子支起来的廊桥。
+	是柱子支起来的廊桥
 
-（左侧本身有些像桥）
+
+画面左侧像有段桥
 
