--- a/2015/2015_01_16_08.md
+++ b/2015/2015_01_16_08.md
@@ -5,8 +5,8 @@
 	五点五十
 	穿上条二手内裤
 	
-	插牙刷的茶杯，金色的茎蔓，蓝色的花
-	可今天
+	插牙刷的茶杯
+		金色的茎蔓，蓝色的花
 	我戴着帽子
 	端着喝红酒的钢杯子洗脸
 	
@@ -14,41 +14,41 @@
 	火炕烤焦了被子
 	烤焦了我自己
 	只好
-	拿火炕炒了一麻袋的花生
+		拿火炕炒了一麻袋的花生
 	
 	月亮绕到了老春树的左腰
-	似一位减肥成功的姑娘
-	靠在椅子上
-	等待着瘦身代言
+		似一位减肥成功的姑娘
+			靠在椅子上
+				等待着瘦身代言
 	
 	金星还在老地方
 	
 	晨雾和六点二十六
-	在门外等我了
+	在门口等我了
 	
-	昏昏暗暗的
-	那往日燃烧的灶膛
-	窒息在这个早晨
+	昏昏暗暗的村庄
+		那往日燃烧的灶膛
+			窒息在早晨
 	让我想起，我家灶膛的心跳
 	
-	老黄狗趴在房山
-	有兴致的啃着冬天的梦
+	老黄狗趴在墙根
+		有兴致地啃着冬天的梦
 	
 	车站上有位姑娘
 	
 	东行的路灯
-	是热恋天使的脚印
-	沿着海边消失在远处
+		是热恋天使的脚印
+			沿着海边消失在远处
 	
 	班车上晃醒
-	也到了该醒的时间
-	恍惚还在床上
+		也到了该醒的时间
+			恍惚还在床上
 	
-	想着天暖时
-	我站在院子里
+	想着
+		我站在院子里
 	用尿盖住了我的口水
 	免得哈士奇人
-	打探我午餐的口味
+		打探我午餐的口味
 	
 	八点的太阳
 	真是迷人
@@ -58,11 +58,13 @@
 	真是迷眼
 	把梦着春天的树枝的剪影，烤穿了一个洞
 	
-	沿着那洞望去
+	向右
+		沿着那洞望去
 	黑帽子的黑衣人
 	读着路边电线杆上的广告条
-	拎着黑包，继续前行
+		拎着黑包，继续前行
 	
-	我要了一个咸鸭蛋
-	比往常，多花了七角钱
+	早餐
+		白鸡蛋换成了咸鸭蛋
+			比往常，多花了七角钱
 	
