--- a/2015/2015_01_16_08.md
+++ b/2015/2015_01_16_08.md
@@ -3,38 +3,38 @@
 
 	
 	五点五十
-	穿上条二手内裤
-	
-	插牙刷的茶杯
-		金色的茎蔓，蓝色的花
-	我戴着帽子
-	端着喝红酒的钢杯子洗脸
-	
-	想着这个冬天睡火炕
+
+	这个冬天睡火炕
 	火炕烤焦了被子
 	烤焦了我自己
 	只好
 		拿火炕炒了一麻袋的花生
+
+	插着牙刷的茶杯
+		画着金色的茎蔓，蓝色的花
+	我戴着帽子
+		端着喝红酒的钢杯子洗脸
 	
+	窗外
 	月亮绕到了老春树的左腰
 		似一位减肥成功的姑娘
 			靠在椅子上
-				等待着瘦身代言
-	
+				等待着瘦身代言	
 	金星还在老地方
 	
 	晨雾和六点二十六
-	在门口等我了
+		在门口等着我
 	
-	昏昏暗暗的村庄
+	走过昏昏暗暗的村庄
 		那往日燃烧的灶膛
-			窒息在早晨
-	让我想起，我家灶膛的心跳
+			窒息在冬夜
+	让我想到
+		我家灶膛的心跳
 	
 	老黄狗趴在墙根
 		有兴致地啃着冬天的梦
 	
-	车站上有位姑娘
+	车站有位姑娘
 	
 	东行的路灯
 		是热恋天使的脚印
@@ -51,12 +51,12 @@
 		打探我午餐的口味
 	
 	八点的太阳
-	真是迷人
-	上方飘着一朵乌云
+		真是迷人
+			上方飘着一朵乌云
 	
 	八点的太阳
-	真是迷眼
-	把梦着春天的树枝的剪影，烤穿了一个洞
+		真是迷眼
+			把梦着春天的树枝的剪影，烤穿了一个洞
 	
 	向右
 		沿着那洞望去
