--- a/2015/2015_01_16_07.md
+++ b/2015/2015_01_16_07.md
@@ -17,15 +17,17 @@
     	还有那海浪堆起的
 			飘落的雏菊花瓣
 	
-	他的瞳仁里
+	虹膜上
 		是教堂的图书室里
 			热情的梵高
 				高高地把圣经摞在一起
 					（都快碰到屋顶了）
 
-	他的瞳仁里，有你挽着我，讨论着少年时的情歌
+	虹膜上，还有
+		未来
+			你挽着我，讨论着少年时的情书
 
-	他的瞳孔，是两艘停泊的船
+	他的瞳孔，是三艘停泊的船
 
 	
 梵高有很多自画像
