--- a/2015/2015_01_16_23.md
+++ b/2015/2015_01_16_23.md
@@ -23,9 +23,9 @@
 	
 	这个寒冷的子夜
 		我从记忆中摘下它
-		（你解读我心中的画面）
+		（与你解读我心中的画面）
 		
-	那一夜的月亮和星星
+	那个夜晚的月亮和星星
 		是我送给你的礼物
 	
 	你若喜爱
@@ -38,10 +38,9 @@
 	山和树涌起快乐的波涛	
 
 	那棵嫉妒的墨绿色高树
-		扭动着刺向空中
-	
-	却让这个画面
-		从圆满变得完美
+		扭动着刺向空中	
+		却让这个画面
+			从圆满变得完美
 
 
 
