--- a/2015/2015_01_14_22.md
+++ b/2015/2015_01_14_22.md
@@ -1,8 +1,11 @@
 
-
-![v1](vincent/town.png)
-
 # 15年1月14日，晚
+
+梵高《夜晚露天咖啡座》
+
+![v1](vincent/Vincent_Willem_van_Gogh_015.jpg)
+
+解读
 
 	梵高在天空
 	煎了一些荷包蛋
@@ -12,8 +15,10 @@
 	
 	焦急的人们，等着蛋快点煎好
 	
-	红色的地毯，烘托着期盼中的食物
-	油灯照亮的墙壁和顶棚，用来指示蛋的落点
+	橙红色的地毯，烘托着期盼中的食物
+
+	油灯照得墙壁和顶棚暖暖的
+		用来指示煎蛋的落点
 	
 	疙瘩瘩的地面，是大地的胃
 	     她一定会争抢消化天上掉下来的鸡蛋
