--- a/2015/2015_01_16_23.md
+++ b/2015/2015_01_16_23.md
@@ -19,11 +19,11 @@
 	让它点亮我的航道
 	
 	那年之后我四处流浪
-	弄丢了你送的礼物......
+	弄丢了你送的礼物，再也找不回来......
 	
 	这个寒冷的子夜
 		我从记忆中摘下它
-		（与你解读我心中的画面）
+		（与你解读我心中的《星夜》画面）
 		
 	那个夜晚的月亮和星星
 		是我送给你的礼物
@@ -44,7 +44,7 @@
 			从圆满变得完美
 
 
-
+记录于17日早
 
 
 
