--- a/2015/2015_01_14_15.md
+++ b/2015/2015_01_14_15.md
@@ -12,17 +12,17 @@
 	我摇着生锈的铃铛
 	轻快地跑在年少时上学的路上
 	
-	遇见那进站的火车，似条乌黑贪吃的铁蛇
-	消化着钢圈和铁砣
+	遇见那进站的火车，是条乌黑贪吃的铁蛇
+	敞开的肚皮里，裸露着同样乌黑的钢卷和钢筋
 	
 	远近那尿急的烟囱
-	憋不住而尿向了天空，尿湿了行人们的眼睛
+		憋不住而尿向了天空，尿湿了行人们的眼睛
 	
-	遇见热情的妇人
+	街角两个热情的妇人
 	搀扶着醉酒的孩童
 	
-	城里一座座的敌楼
-	张着一排排空洞的眼睛
+	周围一座座故作敌楼的高楼
+	张着一排排暗淡空洞的眼
 	
 	我举着业务受理单
 	却没带身份证复印件
