--- a/2015/2015_01_17_10.md
+++ b/2015/2015_01_17_10.md
@@ -6,8 +6,8 @@
 	"同学，同学
 	     出来聊聊！"
 	
-	"都忙，都酝酿呢，酝酿下一次聚会"
-	"都忙，随份子去......"
+	"都忙，都在酝酿呢，酝酿下一次聚会"
+	"都忙，随份子去"
 	
 	"那我吃点儿早饭
 	     带着我家猎狗
@@ -25,25 +25,33 @@
 	我推开屋门
 		走进庭院
 	两只哈士奇，"嘿嘿"和"哈哈"
-		开始放鞭炮
-			来迎接新娘
+		啪啪啪（汪汪汪）地放起了鞭炮
+			来迎接正要过门的新娘
 	
 	两只白鹅，也吹起了唢呐
 	
 	我在晾台上小跑
-	小狗也追随者我
-		或给我引路
-			不时还叼起一块
-				吃剩的骨头
+	狗也追随着我
+		或者给我引路
+			不时还叼起
+				一块吃剩的骨头
 	
-	鹅和狗
-		又开始隔着矮墙争吵
+	狗见我停下
+		又开始跟鹅隔着青瓦矮墙争吵
 	
-	今天的"嘿嘿"，却不满"哈哈"跟鹅打闹
-		不停地从背后骚扰
+	今天的"嘿嘿"，同样又在"哈哈"背后不住骚扰
+		"该我来吵，该我来吵"
+			"咬你后腿，就咬你后腿"
 	
 	"嘿嘿"从晒台上啃起一块冻僵的鹅粪
 		不顾我的呵斥
 			分两口
 				咽了下去	
-		然后，深情地回望我
+		然后，深情地回头望我
+	
+（鹅粪饼干）
+
+	我走进院子
+	小狗在我的腿下撕咬
+	对于狗姐妹来说
+		撕咬是一种表达亲密关系的方式
