--- a/2015/2015_01_17_12.md
+++ b/2015/2015_01_17_12.md
@@ -2,50 +2,46 @@
 15年1月17日
 
 	坐上二叔的拖拉机
-	去拉我的书架
+	去拉我的新书架
 	
 	没有书架
-	我就没有学问
+		我就没有学问
 	
 	天气实在太冷
 	拖拉机都跑不动
 	
 	遇到一处高坡
-	几次熄火滑到坡地
+		好几次熄火
 	
 	这大冷的三九天
-	油都结了"冰"
+		油都结了"冰"
 	
 	几个工人在路边午餐
-	每个人端着饭碗
-	地上一碗小菜
-	一堆矿泉水瓶子上
-	放着一大包烙饼
+		端着米饭
+			地上摆着一碗小菜
+	还有一大包烙饼
+		放在一堆矿泉水瓶子上
 	
-	我做上拖拉机后斗
-	里面还剩了些牛粪
+	装上了我的新书架
+		我坐上拖拉机后斗
+			里面还剩了些牛粪
 	
-	我这漂亮的书架
+	我坐在后斗里
+		不看四周一眼
+			不然会冻到我的脸
+
+	这个寒冷的三九天
+		天空并不是冷艳的蓝
 	
-	
-	我坐在车斗里
-	不看四周一眼
-	因为一看，就会冻我的脸
-	
-	我忽然想到
-	别撞到限高的栏杆
-	
-	撞坏了我的脑袋
-	这书架岂不是白买
-	
-	拖拉机慢慢开过
-	一个地上的大坑
+	忽然想到
+		别撞到限高的栏杆	
+			撞坏了我的脑袋
+				这书架岂不是白买
 	
 	我偷看到路边的豆角
-	在篱笆上晾着干枯的春天的梦
+		在篱笆上晾着干枯的春天的梦
 	
-	这个寒冷的三九天
-	天空并不是冷艳的蓝
+
 
 
 梵高画的一首诗
