--- a/2015/2015_01_18_11.md
+++ b/2015/2015_01_18_11.md
@@ -3,30 +3,31 @@
 
 ## 周六的劳动
 
-	一个下午
-	从一点到十点
+	一个周六下午
+	从一点干到十点
 	拆了是十二个包装
 	拧了一百五十六个螺钉
 	组装了四个半书架
 	
-	手破了皮
+	手割破了皮
 	指甲冒了血
 	汗湿了衣服
-		弄脏了眼睛
+
 	我也变成了个熟练工
 	
 	没有书架
-	便不能好好看书
-	我的朋友们
-	终于有了安置房
+		便不能好好看书
 	
 	可你看
 		这书架却做成了酒架
-	我的书就是我的酒
+	好吧
+		我的书就是我的酒
 	
-	有空来我书房喝酒
+	来吧
+		有空来我书房
+			喝酒
 
-	我有一些陈年老酒
+	我有些陈年老酒
 		不知你喜不喜欢
 
 	
