--- a/2007/2015_01_17_11.md
+++ b/2007/2015_01_17_11.md
@@ -1,9 +1,9 @@
 
+# 野三坡
 
 
 	那个六月的早晨
-	我们第一次相约
-		去看河
+	我们第一次相约去看河
 	
 	你戴一顶奇怪的帽子
 	露着一条马尾巴辫子
@@ -20,11 +20,10 @@
 	我掏了五十一元
 	请你吃小河虾和野菜窝头		
 
-	那么一趟敞着车窗火车
-	飘进细细的煤灰
-	
-	我们还留着车票
+	那慢悠悠返程的火车
+	吹进来很多的煤灰
 
-
+	晚饭吃了些水饺
+	道别简单得捏了捏手而没有拥抱
 
 2015年1月17日记录下来
