--- a/2015/2015_01_16_07.md
+++ b/2015/2015_01_16_07.md
@@ -8,6 +8,10 @@
 
 解读
 
+	梵高有超过三十六幅的自画像
+		在不同的时间
+			不同的城市
+		
 	这是梵高眼睛的自画像
 		但他只画了
 			局部
@@ -33,4 +37,6 @@
 	他的瞳孔，是三艘停泊的船
 
 	
-梵高有不少自画像
+梵高有很多自画像
+有些年他喜欢画上黄色的草帽
+有些年他喜欢画上络腮胡子
