--- a/misc/hs03.md
+++ b/misc/hs03.md
@@ -8,3 +8,58 @@
 	我于夕阳中期盼
 		我的船一去不复返
 			漂泊在蔚蓝之间
+
+
+## 无题
+
+	止住你的泪
+	不要模糊了双眼
+	不然怎能看清期待的那片蓝天
+
+
+## 无题
+
+	为苦痛而生者
+	也只为昨天而活
+	真正伟大的心灵
+	总是在苦痛中寻找欢乐
+	因为苦痛总是在欢乐之前
+
+
+
+## 无题
+
+	挥一挥手拂去所有失意
+	用欢笑开始新的呼吸
+	失意当做解脱
+	解脱了失落
+	莞尔一笑带给你一个春天的梦
+	风已吹旧心的痕迹
+
+
+## 无题
+
+	要向前就把血滴在身后
+	要总就要潇洒地走
+
+## 无题
+
+	并非还在幼稚
+	不过想留下天真
+	
+	并非不珍视热血
+	否则失去的将是勇气
+
+## 无题
+
+	问我哪去
+	到想去的地方
+	问我干什么
+	为去寻找自由
+	我发现的大早
+
+
+## 无题
+
+	我的职业
+	是在身上铭刻伤口
