--- a/2005/2015_01_17_11.md
+++ b/2005/2015_01_17_11.md
@@ -1,23 +1,40 @@
 
 
-# 一场约会
+# 囚徒的约会
 
 	那个青岛的夏天
-	我们相约在海边
+		我每天被囚禁在酒店
+		我被囚禁在办公楼
+		我被囚禁在马路上
+
+	一个放风的周末
+		阳光格外的鲜亮
+			当我感受到自由
+				我不想重回那些牢房
 	
-	你个子瘦瘦的，高高的
-		头发乌黑的
-			脸干净的
-				眉毛弯弯的
+	那个纯净的下午
+		我们相约到海边
 	
-	你穿着牛仔裤
-	你穿着高跟鞋
+	高高瘦瘦的你
+		头发乌黑垂肩
+			眉毛细细弯弯
+				眼睛清澈闪亮
+					嘴巴没敢细看
+	
+	你穿了件白色衬衫
+	你穿了件蓝色牛仔裤
+	你穿了双黑色高跟鞋
+	你没带遮阳伞
 		
-	你美得像个仙女（现在称之为"女神"）
-		你的美斩断了我的魔抓
+	你美得像个仙女
+		你静得像个天使
+			你的美截断了时间
+				你的美收了我的欲念
 	
-	我来海边拾贝壳
-		我不去拾你的美
+	我这个放风的囚徒
+		到海边来拾贝壳
+			我不去拾你的美
+				我还是回我的牢房
 
 	那个美的夏天
 		我们再没有见面
