--- a/2015/2015_01_18_11.md
+++ b/2015/2015_01_18_11.md
@@ -3,9 +3,10 @@
 
 ## 周六的劳动
 
-	一个周六下午
+	周六的下午
 	从一点干到十点
-	拆了是十二个包装
+
+	拆开了十二个包装
 	拧了一百五十六个螺钉
 	组装了四个半书架
 	
@@ -13,7 +14,7 @@
 	指甲冒了血
 	汗湿了衣服
 
-	我也变成了个熟练工
+	我也成了个专业木工
 	
 	没有书架
 		便不能好好看书
