--- a/2005/2015_01_17_11.md
+++ b/2005/2015_01_17_11.md
@@ -25,7 +25,7 @@
 	你穿了件蓝色牛仔裤
 	你穿了双黑色高跟鞋
 	你没带遮阳伞
-		
+
 	你美得像个仙女
 		你静得像个天使
 			你的美截断了时间
@@ -43,4 +43,8 @@
 		我们未曾见面
 
 
-2015年1月17日，记录将近11年前的一次海边约会
+2015年1月17日，记录将近11年前的一次海边约会。
+
+清新的海风
+白色的石栏
+蔚蓝的海面
