--- a/2015/2015_01_19_08.md
+++ b/2015/2015_01_19_08.md
@@ -2,28 +2,47 @@
 # 2015年1月19
 
 	六点二十六
-	甲午年冬月廿久
+	冬月廿久
 	
 	我走入黑洞洞的村庄
+
 	抬头
-	金星鼓足了勇气
+	金星鼓足了勇气等她
+
 	北斗指着东南
-	东偏南的地平线
-	     泛着微弱的蓝光
+		东偏南的地平线
+	    	泛着微弱的蓝光
 	
-	天空是一穹巨大的画面
-	好像巨大教堂的穹顶
-	泛着柔美的淡蓝
-	等着天使着落
+	天空是一穹巨大的眼角膜
+		干干净净地点缀些星星
+			等着天使着落
 	
-	我走入天空的垃圾场
-	星星只剩下三颗
+	路过那往日的灶火
+		正燃着的几块木柴
+			欢乐地冒着暖暖的橙黄色火苗
+
+	转过街角
+		老黄狗不见踪影
+			想必是隔着门保持缄默
+
+	我走出村庄
+		穿过公路
+			走上站台
+
+	抬头
+	我走入了天空的垃圾场
+		路灯光狼藉地散落，混乱得刺眼
+			夹缝里的星星，只剩三颗
 	
+	远望
 	天边冒出了红雾
-	冒上去变成了蓝烟
+		蒸蒸地上升
+			泛成了蓝烟
 	
-	残月弯弯
-	靠近太阳升起的地点
+	地平线之上的天际
+		映着残月
+			残月似在冥想
 	
-	天空淡蓝
-	路上的人们挂着微笑
+	太阳出来了
+		天空淡蓝
+		路上的人们翻出了微笑
