--- a/2015/2015_01_19_18.md
+++ b/2015/2015_01_19_18.md
@@ -3,27 +3,36 @@
 # 15年1月19日
 
 	日落时分
-	天空飘着杂尘
+		空中弥漫着杂尘
 	白茫的天色
-	呈现出宜芬公主所见的沙寨天空
+		呈现出宜芬公主所见的沙寨天空
 
 	天渐渐发灰
 	夜已经上路
 
+	大院的灰柱
+	像着装整齐的哨兵守着鸿门宴
+
 	路边的树木
-	像伏兵冒出一样让逃兵更败
+	似伏兵冒出一样让逃兵更败
 	
 	干涸的河道
 		流淌着黑夜
-			却也偶尔漂浮着几面镜子
+			却也偶尔漂浮着几面微亮的镜子
+				那是结冰的小水坑
 
 	天完全黑了下来
 	
 	道路两旁如夜晚的山谷
 		传上来一点点幽幽的光
+			应该是村庄里的晚餐灯光
+				散发着淡淡的葱花香
 
 	转上大路
 	热闹的路灯
-		尝试掩盖黑夜的真像
+		尝试掩盖黑夜的真相
+	灯亮得多了
+		便让人们暂时淡忘了恐惧黑夜
 
 
+这样的雾霾天，黄昏到黑夜
