--- a/2015/2015_01_20_07.md
+++ b/2015/2015_01_20_07.md
@@ -2,7 +2,7 @@
 # 风
 
 	那无形的
-		巨大而又小得看不见的生命
+		最大而又最小的生命
 			在天地间驰骋
 	你喜时的温柔
 		怒时的强劲
@@ -12,7 +12,7 @@
 		你总给人一种新的感觉
 
 	你为天空拂去泪痕
-		为黑夜送去满天星
+		为黑夜送去满天星星
 	
 	你这真正自由的生命
 		以枝为笛，与草木同舞
