--- a/2015/2015_01_20_21.md
+++ b/2015/2015_01_20_21.md
@@ -3,25 +3,36 @@
 
 ![Starry](xingzhou/eased.jpg)
 
+	想找一块安静的平地
+		读书
+	想找一块明媚的平地
+		发呆
+	想找这幅画中的自己
+		和这块平地......
+
 	湖畔的春天
-	     垂柳嫩黄
-	     白杨鲜绿
+	    垂柳嫩黄
+	    白杨鲜绿
 	
 	一颗古老的枣树
-	     感官已有些迟钝
-	               迟到的叶子零星的摇着
+	    感官已有些迟钝
+	    	错过了长叶子的时间
+				但，一切都还来得及
 	
 	春风细微
-	     鱼儿潜游
-	          湖面映着山色，没有涟漪
+	    枝叶轻摇
+			鱼儿潜游
+	   			湖面映着山色，没有涟漪
 	
-	一座小木桥
-	     静悄悄地漂在湖面
-	          另一端系在对岸的山脚
+	一座窄窄的小木桥
+	    静悄悄地漂在湖面
+			一端牵着画中的湖岸
+	        	另一端系在对岸的山脚
 	
 	我独坐在草亭里
-	隔着一潭湖水，默对青山
-	     静读一首词......
+		隔着一潭湖水，默对青山
+	    	静
+				读一首词......
 	
 	天籁低微
 	     凝神冥想
