--- a/2015/2015_01_20_20.md
+++ b/2015/2015_01_20_20.md
@@ -1,7 +1,11 @@
 
 # 15年1月20日
 
+陈星州《我见青山-香风》
+
 ![Starry](xingzhou/smell.jpg)
+
+## 香风
 
 	一个流传下来的故事
 	却重复了千年
@@ -10,7 +14,7 @@
 	我进山去探访少年时的玩伴
 	
 	青山碧绿
-	云汽袅袅
+	云气袅袅
 	槐叶稠密
 	松腰挺拔
 	
