--- a/2015/2015_01_20_21.md
+++ b/2015/2015_01_20_21.md
@@ -1,14 +1,20 @@
 
 # 15年1月20日
 
+陈星州《我见青山-自在》
+
+
+
 ![Starry](xingzhou/eased.jpg)
 
-	想找一块安静的平地
+## 自在
+
+	想找一小块安静的平地
 		读书
-	想找一块明媚的平地
+	想找一小块明媚的平地
 		发呆
 	想找这幅画中的自己
-		和这块平地......
+		和这小块平地......
 
 	湖畔的春天
 	    垂柳嫩黄
@@ -34,9 +40,11 @@
 	    	静
 				读一首词......
 	
-	天籁低微
-	     凝神冥想
-	          我见青山
-	
 	我发现自己已在词中
 	     "春风自在杨花"
+
+--
+
+天籁低微
+     凝神冥想
+          我见青山
