--- a/2015/01/2015_01_27_08.md
+++ b/2015/01/2015_01_27_08.md
@@ -26,7 +26,7 @@
 	
 	路边
 	风中枝头
-		玉兰的花蕾
+		玉兰的花苞
 			是少女闭着的眼睛
 				化了橄榄绿的烟熏装
 				
@@ -37,5 +37,5 @@
 		睁开眼
 			春风便来
 
-	早餐没有大蒜
-		还真是怀念
+早餐没有大蒜
+	还真是怀念
