--- a/2015/01/2015_01_21_07.md
+++ b/2015/01/2015_01_21_07.md
@@ -26,7 +26,7 @@
 		击中桥下避雨的一只野兔
 	
 	小偷翻墙惊了一片马
-	     那匹马跑到十字路撞车自杀
+	     惊马奔到十字路口撞车自杀
 	
 	老头站在水闸上
 		送我一把葵花籽
@@ -39,12 +39,12 @@
 	
 	这小河干了很多年
 		之前是酒厂的排污道
-
 	再之前
-		成群的螃蟹这这儿谈恋爱
+		成群的螃蟹在河里早恋
 	
-	九七零拉上我
-		还拉着半车的浅睡
+	使了个眼色
+		九七零拉上我
+			还拉着半车的浅睡
 	
 # 大雪山
 	
@@ -54,67 +54,65 @@
 		抓紧练练腿脚		
 
 	见东方天边
-		一笔闲云
-			画了座霸道的大雪山
+		一笔闲云慢慢上提
+			由北向南画了一座大雪山！
 	
 	十里长的山坡
-		缓缓地指向消失的山顶
+		缓缓地指向消失的山尖
 	
 	山脊裸露
-		避风的雪都躲到了坡上
+		避风的雪都躲进了山坡
+
+	没有人迹
+		没有飞鸟
+			也没有许多沉闷
 	
-	山坡上浮着白云
-		有几朵悄悄地在翻山
+	山坡上
+		悠悠地浮着白云
+			有几朵悄悄地翻山
 	
-	六点五十二	
-		山脚下万顷桃花
-			暖暖地泛着红光
+	只过半刻 (六点五十二)	
+		山脚暖暖地泛起红雾
+			如燃烧的阿房宫	
 	
-	七点三十六
+	小睡醒来 (七点三十六)
 		雪山沉入地下
-			仅露出个小山包
-				汩汩地冒着熔岩
+			仅露的小山包汩汩地冒着熔岩
+
+	阳光照着西山
+		西山得意地存在着
+			裸露的青岩看不到雪
 
 	短短的早晨
-		却是一座雪山的亿万年
-
-	阳光射过去
-		西山清晰了
-			裸露着看不到雪
+		短短的旅程
+			也是一座雪山的亿万年
 	
 	旧广场上碰到个文静姑娘
-		脸上有两座端着的小青山
-			擦肩而过
+		脸上有两座端庄的小青山
+			我们擦肩而过
 				我来不及问青山的名字
 
 ## 	无题
 
 	七点四十六	
-		太阳像个蛋黄
 	
-	七点五十
-	拦不住的阳光
-		穿越树林
-			硬硬地甩在我身上
+	太阳像个蛋黄	
+		转眼间阳光就穿透过树林
+			倔强地甩在我身上
 	
 	天空开始温暖
+		人类开始晒暖
 
-	我们人类
-		晒了太阳却榨不出多少石油
+	可惜人类晒了太阳
+		却榨不出些许石油
 	
-	桥上二十二人
-		男生和四个女生在等车
+	堵在路口
+		算出桥上二十二人
+			男生和四个女生
 	
-	桥下荷塘浅
-		残荷凌乱
+	桥下浅浅的荷塘
+		残荷回忆着盛夏
 	
-	下了班车
-		想着早餐
-	
-	到同车的美女坐在对面
-		我摘了帽子只吃了一瓣大蒜
-	
-
-
-
-
+	同车的陌生美女坐到对面
+		我只好摘下帽子
+			早餐只吃了一瓣大蒜
