--- a/2015/01/2015_01_21_09.md
+++ b/2015/01/2015_01_21_09.md
@@ -1,13 +1,16 @@
 
+#15年1月21日
 
 ## 鹅蛋
 
 	腊月初二
-	早晨
+		大寒	
 	
-	昨天洗完澡的鹅
-	大寒的夜里，在狗窝下了一个蛋
-	两只鹅守到狗窝门口
-	狗已经躲到别处去了
+	前日洗冬澡的鹅	
+		冬夜在狗窝生了个蛋
 	
-	不是鹅是否一天能下一个蛋？
+	鹅守到狗窝门口
+		狗躲出去老远
+	
+	鹅妹妹
+		能否一天一蛋？
