--- a/2007/2015_01_17_11.md
+++ b/2007/2015_01_17_11.md
@@ -12,7 +12,7 @@
 	载着我们的谈话
 
 	那路边的拖拉机
-	跟你热烈的拍照
+	跟你热烈的合影
 
 	还不敢碰你的手
 	结果摔坏了你的相机
@@ -23,7 +23,8 @@
 	那慢悠悠返程的火车
 	吹进来很多的煤灰
 
-	晚饭吃了些水饺
-	道别简单得捏了捏手而没有拥抱
+	晚饭吃了些水饺		
+	道别简单得捏了捏你的手
+		没有拥抱
 
 2015年1月17日记录下来
