--- a/2015/02/2015_02_02_08.md
+++ b/2015/02/2015_02_02_08.md
@@ -26,9 +26,8 @@
 	                    倒在了冬天，在田野里吃麦苗的幻梦里
 	
 	太阳橙红如个蛋黄，
-		上边亮，下边暗，渐渐均匀
-	    	天空还没有光芒，
-	        	太阳刚刚暖和了自己
+    	天空还没有光芒，
+        	太阳刚刚暖和了自己
 
 	向前望
 		密密麻麻的刹车灯
@@ -45,15 +44,15 @@
 		已经有了些绿意
 	    	包裹着点点成长的妄动
 	        	好像风中的橡皮头
-	            	视图擦去灰色的冬天	     
+	            	视试图擦去灰色的冬天	     
 	
 	只有到了城里
 	     才能听到自己爬楼梯的脚步声
-	     还有别的高跟鞋踩在城市上
-	          如时钟的滴答轻响
+	     	还有别的高跟鞋踩在城市上
+	        	如时钟的滴答滴答轻响
 
 
-想起小学二年级那篇课文《初冬》
+想起三十三、年前，也就是小学一、二年级时的那篇课文《初冬》
 
 远处的塔，小山都望不见了。近处的田野，树林像隔着一层纱，模模糊糊看不清。
 
