--- a/2015/02/2015_02_02_08.md
+++ b/2015/02/2015_02_02_08.md
@@ -40,16 +40,17 @@
 	银杏芽苞
 		远看是水墨画中遍布枝头的墨点
 	     	黑色更容易吸收热量	
+	
 	近看
 		已经有了些绿意
 	    	包裹着点点成长的妄动
 	        	好像风中的橡皮头
-	            	视试图擦去灰色的冬天	     
+	            	试图擦去灰色的冬天	     
 	
 	只有到了城里
 	     才能听到自己爬楼梯的脚步声
 	     	还有别的高跟鞋踩在城市上
-	        	如时钟的滴答滴答轻响
+	        	如时钟般滴答轻响
 
 
 想起三十三、年前，也就是小学一、二年级时的那篇课文《初冬》
