--- a/2015/01/2015_01_01_23.md
+++ b/2015/01/2015_01_01_23.md
@@ -1,25 +1,39 @@
 
-# 15年1月1日
+## 15年1月1日，晚
 
-	元旦
-
+# 西安小聚
+	
+	
 	西安
-	老同学，聚宴欢
-		散
-	
-	新地铁，我们遁形古城底
-	
-	冒出地面
-		清冷的天，
-			似当年梧桐立在暗夜中的校园
-	
-	哼着那歌
-		一个人
-			走在冰冷的长夜，想起分手前熟悉的脸
-	
-	呵，这次分手的，又是室友英男
-	
-	十一点
-		闪烁的警灯、道别的人、一堆碎酒瓶
-			暗示着还有，另一场欢宴
+		故城无雪
+			"寒夜里看雪飘过"
 
+	刹那恍惚
+		秦川
+			老同学欢聚欢散	
+	
+	绕遍古城
+		飞过天空
+			今夜穿行城底
+	
+	想起分手前
+		熟悉的脸	
+			这次又是老友英男
+
+	长街清冷
+		当年梧桐
+			夜立工大
+
+	哼着
+		"走在冰冷的长夜"
+			十一点
+	
+	另一场欢宴
+		十二瓶啤酒碎裂
+			大地一起畅饮
+
+	走遍千里
+		喜欢这里
+
+
+来西安，总让我想起Beyond《海阔天空》
