--- a/2015/01/2015_01_08_08.md
+++ b/2015/01/2015_01_08_08.md
@@ -1,21 +1,27 @@
 
 # 15年1月8日
 
-	清晨六点二十六
+	六点二十六
 	冬月十八
 	
-	开门，满地清光
+	开门
+		满地清光
 	
 	清冷的空气中，肆惮的煤烟
 	
 	街角迎面的电话闲谈
-	路上早起的电瓶车
+		路上早起的电瓶车
+	
 	左转
 		楼梯上走下来半支香烟
 	
-	右转，院落里一声犬吠，听得出敷衍
+	右转
+		院落里一声犬吠
+			听得出敷衍
 		
-	抬头，月上一丈，金星静悬
+	抬头
+		月上一丈
+			金星静悬
 	
 	紧赶两步
 		还是错过了一路九八零
@@ -23,3 +29,5 @@
 	意念间
 		碎了一地短句、半口痰
 
+---
+第一首
