--- a/2015/01/2015_01_17_12.md
+++ b/2015/01/2015_01_17_12.md
@@ -2,32 +2,36 @@
 15年1月17日
 
 	坐上二叔的拖拉机
-	去拉我的新书架
+		去拉我的新书架
 	
-	没有书架
-		我就没有学问
+	没书架
+		就没学问
 	
 	天气实在太冷
-	拖拉机都跑不动
-	
-	遇到一处高坡
-		好几次熄火
-	
+		拖拉机都跑不动	
+	到一处高坡
+		好几次熄火	
 	这大冷的三九天
 		油都结了"冰"
 	
 	几个工人在路边午餐
 		端着米饭
-			地上摆着一碗小菜
-	还有一大包烙饼
-		放在一堆矿泉水瓶子上
+			地上摆一小碗菜
+	
+	一大包烙饼
+		放在几瓶矿泉水上
+
+	这是戍边的汉兵
+		围一起烤野兔？
+	或者是胡兵
+		坐一堆儿商量突袭？
 	
 	装上了我的新书架
 		我坐上拖拉机后斗
-			里面还剩了些牛粪
+			里面剩了些唐朝的牛粪
 	
-	我坐在后斗里
-		不看四周一眼
+	坐在后斗里
+		我不看四周一眼
 			不然会冻到我的脸
 
 	这个寒冷的三九天
@@ -42,6 +46,6 @@
 		在篱笆上晾着干枯的春天的梦
 	
 
+---
 
-
-梵高画的一首诗
+走在路上，就会看见梵高画的一首诗
