--- a/2015/01/2015_01_22_09.md
+++ b/2015/01/2015_01_22_09.md
@@ -30,10 +30,6 @@
 		为谁挠痒？
 		虚空或者你的实肺
 
-	挨着一位去开会的环保专家
-		讨论着三维打印的弥勒佛
-			新农村的房舍和笨蛋们
-
 	飞向前
 		高度八、九千米
 	
@@ -54,7 +50,5 @@
 		上海浦温暖的落日
 
 
-阳光分为两种
-	蓝色的
-	白色的
+挨着一位去开会的环保专家，讨论了三维打印的弥勒佛，	新农村的房舍和一些笨蛋
 
