--- a/2015/01/2015_01_28_07.md
+++ b/2015/01/2015_01_28_07.md
@@ -11,22 +11,22 @@
 		我是预言家
 	
 	天空亮蒙蒙没有星星
-		今日有雾
+		雾还不肯散
 	
 	黎明的东天边没有泛红
-		那是有乌云
+		乌云不愿走
 
 	一辆抛锚的货车
-		司机拿着手电
-			那是发动机坏了
+		司机拿着手电看
+			发动机坏了
 
 	四分钟走出五百米
-		赶紧跑回去
-			不然就错过了班车
+		赶紧再跑回来五百米
+			不然会错过班车
 
 	闭着眼
-		我也知道车在转弯
-			时间跟着流淌
+		也能感觉到何时车在转弯
+			但不觉时间跟着流淌
 
 	冷飕飕的风中
 		光秃秃的树枝
