--- a/2015/01/2015_01_31_06.md
+++ b/2015/01/2015_01_31_06.md
@@ -7,14 +7,13 @@
 		将黑暗赶入天空	
 
 	守望久了
-		青草也有了畏敬
+		路上的青草也排列出畏敬
 	
 	小路弯曲着
 		将麦田裁成大地的文胸
 	
 	我先轰走窥探的乌鸦
 		我趁黑摘下大地的Bra
-				
-	
-	
-	
+
+---
+15年1月31日早晨
