--- a/2015/02/2015_02_03_09.md
+++ b/2015/02/2015_02_03_09.md
@@ -1,9 +1,11 @@
 
-## 15年2月3日
+## 15年2月3日，上午
 
 霾，西北风二、三级
 
-# 大地与大海的婚礼
+# 大地与东海的婚礼
+
+	腊月十五
 
 	早晨九点
 		婚礼开始
@@ -12,7 +14,7 @@
 		可她还在半路上
 	
 	大地穿上婚纱
-		神经却有些紧张
+		神情却有些紧张
 	
 	树木像挂着雾淞
 	村庄也泛着白光
@@ -22,8 +24,8 @@
 		路上一层清霜
 			如汉代的云纹铁镜
 	
-	那新郎
-		远方的东海
+	新郎
+		是远方的东海
 			此刻应该有些波澜
 	
 	天空静静地等待
