--- a/2015/02/2015_02_03_19.md
+++ b/2015/02/2015_02_03_19.md
@@ -1,5 +1,5 @@
 
-## 15年2月3日
+## 15年2月3日，晚归
 
 # 无题
 
@@ -7,17 +7,16 @@
 		阳光还暖
 
 	想到无鸟的上午
-		此刻找找
-			果然树上出现两只喜鹊
+		在天空搜索
+			果然树尖出现两只喜鹊
 	
 	睡去半个时辰	
 	东天的月亮
 		偏北天
 			腾了起来
 
-	西边的天空
-		还有一阵落日的余温
-		那是大地睡前喝了红酒
+	西边天际还有一阵落日的余温
+		那是天空睡前喝了杯红酒
 			脸庞泛起的红晕
 
 	路边的树木
@@ -57,7 +56,7 @@
 
 	向东走
 		只有我对月亮
-			一面明月就足以让人爽朗
+			一面明月足以让半张天空爽朗
 	
 	向南走
 		一只黑猫跳过
@@ -72,5 +71,8 @@
 		月亮又遇到我
 			清光更多
 	
-	闻到一股烧棒核儿的味道
-		我将要深入到乌黑村庄的核心
+	闻到一股烧棒胡(核)儿的味道
+		我将深入乌黑的村庄
+
+	回头
+		金星悬着西山顶上
