--- a/2015/02/2015_02_08_07.md
+++ b/2015/02/2015_02_08_07.md
@@ -55,10 +55,10 @@
 	
 	鹅的澡盆里也是冰
 	     梵高割下的耳朵在里面烫出了一个洞
-	          想起"嘿嘿"饮冰
+	          想起"嘿嘿"的饮冰
 
-	你心中无火
-		这是我的罪过
+	狗心中无火
+		饮冰是我的罪过
 
 ---
 昨日发现"嘿嘿"舔冰，就给她们喂了水
