--- a/2007/2015_01_17_11.md
+++ b/2007/2015_01_17_11.md
@@ -1,30 +1,32 @@
 
+## 2007年6月
+
 # 野三坡
 
 
 	那个六月的早晨
-	我们第一次相约去看河
+		我们第一次相约去看河
 	
 	你戴一顶奇怪的帽子
-	露着一条马尾巴辫子
+		露着一条马尾巴辫子
 	
 	那列缓慢的西瓜皮火车
-	载着我们的谈话
+		载着我们的谈话
 
 	那路边的拖拉机
-	跟你热烈的合影
+		跟你热烈地合影
 
-	还不敢碰你的手
-	结果摔坏了你的相机
+	不敢碰你的手
+		结果摔坏了你的相机
 
 	我掏了五十一元
-	请你吃小河虾和野菜窝头		
+		请你吃小河虾和野菜窝头		
 
 	那慢悠悠返程的火车
-	吹进来很多的煤灰
+		吹进来很多的煤灰
 
 	晚饭吃了些水饺		
-	道别简单得捏了捏你的手
-		没有拥抱
+		道别简单地捏了捏你的手
+			没有拥抱
 
 2015年1月17日记录下来
