--- a/2015/02/2015_02_02_08.md
+++ b/2015/02/2015_02_02_08.md
@@ -1,5 +1,5 @@
 
-## 15年2月2日
+## 15年2月2日，早
 
 # 无题
 
@@ -25,8 +25,8 @@
 	               你就血流汩汩
 	                    倒在了冬天，在田野里吃麦苗的幻梦里
 	
-	太阳橙红如个蛋黄，
-    	天空还没有光芒，
+	太阳橙红如个蛋黄
+    	天空还没有光芒
         	太阳刚刚暖和了自己
 
 	向前望
@@ -53,20 +53,8 @@
 	        	如时钟般滴答轻响
 
 
-想起三十三、年前，也就是小学一、二年级时的那篇课文《初冬》
+想起三十三年前，也就是小学二年级时，学《初冬》的那堂课。课文中有一句：
 
 远处的塔，小山都望不见了。近处的田野，树林像隔着一层纱，模模糊糊看不清。
 
-老师问为什么看不清？我举手回答：太阳离那儿太远
-
-
-## 初冬
-
-	早上，白茫茫的一片大雾。
-	远处的塔，小山都望不见了。近处的田野，树林像隔着一层纱，模模糊糊看不清。
-	太阳像个红球，慢慢的升起来，发出淡淡的光，一点也不耀眼。
-	地里的庄稼早就收完了，人们正在忙着收白菜。
-	雾慢慢的散了，太阳射出光芒来。
-	远处的塔、小山都望得见了。近处的田野、树林也看得清了。
-	柿子树上挂着许多大柿子，像一个一个的红灯笼。
-	树林里落了厚厚的一层黄叶。只有松树、柏树不怕冷，还是那么绿。
+老师问为什么看不清？我举手回答："太阳离那地儿太远"
