--- a/2015/04/2015_04_02_10.md
+++ b/2015/04/2015_04_02_10.md
@@ -37,7 +37,7 @@
 	
 	"旧雨(友人)常来
 	     今雨不来"
-	         是说当年的下雨天读书提天么？
+	         是说当年的下雨天读书天么？
 	  
 	"古今吾道悠悠"
 	     看来我去哪个朝代都会遇堵
@@ -46,10 +46,10 @@
 	    "儿曹抵死，唤不回头"
               来堵的总会来
 	
-	那数车的女子呢？
-	     "为谁西望，凭栏一晌"
+	那数牛车的女子呢？
+	     "为谁西望，凭栏一饷"
 	
-	辛老果真在八百一拾五年前
+	辛老果真在八百一十五年前
 	     知道今天会与我相遇在这牛北路上
 	
 	起步
