--- a/2015/01/2015_01_01_23.md
+++ b/2015/01/2015_01_01_23.md
@@ -4,7 +4,7 @@
 # 西安小聚
 	
 	
-	西安
+	长安
 		故城无雪
 			"寒夜里看雪飘过"
 
@@ -13,8 +13,8 @@
 			老同学欢聚欢散	
 	
 	绕遍古城
-		飞过天空
-			今夜穿行城底
+		飞越天空
+			今夜潜行城底
 	
 	想起分手前
 		熟悉的脸	
