--- a/2015/04/2015_04_05_07.md
+++ b/2015/04/2015_04_05_07.md
@@ -6,7 +6,7 @@
 	    至少该多云
 	
 	沿着河岸向北
-	    几只鸟在干枯河床的上空跳跃伴飞
+	    几只鸟在干枯河床的上空跳跃
 	
 	赶在日出之前
 	    我看到了遥望彼岸的地方
@@ -34,14 +34,14 @@
 	     太阳也从云缝中偷眼
 	
 	今年这一顿
-	     桃酥，苹果，白酒
+	     苹果，核桃酥，二锅头
 	
 	新添了美丽的塑料花环
 	    套在屋顶
 	
 	燃起纸钱
 	    灰烬腾起
-	        如翩翩蝴蝶
+	        如蝴蝶翩翩
 	
 	我折下两只柳条
 	    带走些守望的眼神
