--- a/2015/04/2015_04_06_07.md
+++ b/2015/04/2015_04_06_07.md
@@ -13,15 +13,14 @@
 云彩和太阳
      如小时躲在被子里
          棉絮破洞里透过的朦胧灯光
-     早晨屋顶的东风
-         是穿透这被子里吹过来的么？
+     早晨屋顶的东北风
+         是穿透这被子吹来的么？
 
 卧室里结冰的钢笔水瓶
      已经留在了少年时的冬天
-          那时的钢笔写下的句子
-              是否会像前几天哈士奇咬一口马蹄莲的嫩叶
-                        本想尝尝春天
-                        却留下如今叶子上
-                            一张巨大的狗嘴？
+          那些蓝色墨水为你写下的句子
+              是否像几天前哈士奇咬一口马蹄莲的嫩叶
+                        本想尝尝春天，却留下如今长大的叶子上
+                             一张长大的狗嘴？
                             
 早安！
