--- a/2015/04/2015_04_08_08.md
+++ b/2015/04/2015_04_08_08.md
@@ -5,30 +5,30 @@
 
         五点四十五
         麻雀们开始了互问早安        
-        石榴树上的一只
-        别碰坏了嫩红的叶芽
+        石榴树上的那只
+        别惊落了嫩红的叶芽
 
         我竖起梯子
-        狗儿送我上了屋顶
-        想要太阳暖暖的裸照
-        需躲开电线和炊烟      
-
+        狗儿目送我上了屋顶
+        避开电线和炊烟      
+        拍新太阳的裸照
+        
         出门
         喜鹊七只
         月亮泛白
         六点二十五
         
         穿过树林
-        地上新添了一层杨树吊儿
-        我端详了一阵
+        地上又多了些杨树吊儿
+        我停下来端详了一阵
         这是昨夜你练字的半生宣？
 
         一片梨花林，是额尔古纳四月的雪地
-        你带高筒的靴子来了么？
+        你穿高筒靴了么？
         柳花在淡黄的阳光下亮黄
         出嫁时，有这样的盖头才艳
 
         这个早晨，你在红瓦屋顶的房子里
         不远处
         几棵玉兰，抛起白色的浪花
-        出来看，拍岸的春天 
+        来看，拍岸的春天 
